14-ingress/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: mahendra
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: mahendrshinde/hostname:node
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
