14-ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      containers:
      - name: webapp1
        image: mahendrshinde/myweb:1
        livenessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 10

        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp2
  template:
    metadata:
      labels:
        app: webapp2
    spec:
      containers:
      - name: webapp2
        image: mahendrshinde/myweb:2
        livenessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 10
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp3
  template:
    metadata:
      labels:
        app: webapp3
    spec:
      containers:
      - name: webapp3
        image: mahendrshinde/myweb:3
        livenessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 10
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  labels:
    app: webapp1
spec:
  ports:
  - port: 80
  selector:
    app: webapp1
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2-svc
  labels:
    app: webapp2
spec:
  ports:
  - port: 80
  selector:
    app: webapp2
---
apiVersion: v1
kind: Service
metadata:
  name: webapp3-svc
  labels:
    app: webapp3
spec:
  ports:
  - port: 80
  selector:
    app: webapp3
