14-ingress/ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: mahendra
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: mahendra
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: mahendra
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
