14-ingress/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  # On docker desktop load-balancer type would map service to 'localhost'
  type: ClusterIP
  selector:
    app: app1
  ports:
  - port: 8080
    targetPort: 3000
