14-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress1
  namespace: mahendra
spec:
  rules:
    - host: mydemo.com
      http:
        paths:
        - path: /api
          backend:
            serviceName: app1-svc
            servicePort: http
